# oled

./: .gitignore  .gitmodules  Gemfile  README.md  _config.yml  doxygen.config  impressum.md  index.md  privacy.md
.github/workflows/: build.yml  pages.yml  release.yml
_posts/: 2025-09-01-Software-TWI-Parameters.md  2025-09-02-Hardware-TWI-Parameters.md  2025-09-03-OLED-Parameters.md  2025-09-04-FONT-Parameters.md  2025-09-04-FRAME-Parameters.md  2025-09-04-TTY-Parameters.md  2025-09-05-General-Parameters.md
assets/icons/: site.webmanifest
demo/: CMakeLists.txt
demo-avr0/tty-avr0/: main.c
demo/avr/frame/: CMakeLists.txt  main.c
demo/avr/tty/: CMakeLists.txt  main.c
demo/avr0/frame/: CMakeLists.txt  main.c
demo/avr0/tty/: CMakeLists.txt  main.c
demo/frame/: main.c
demo/frame-avr0/: main.c
demo/tty/: main.c
demo/tty-avr0/: main.c
lib/common/defines/: TWI_defines.h
lib/common/drawing/: elements.h
lib/common/enums/: TWI_enums.h
lib/common/macros/: PORT_macros.h  STRING_macros.h
lib/common/numbers/: datatypes.h  radix.h
lib/hal/avr/twi/: twi.c  twi.h
lib/hal/avr/twi_soft/: twi_soft.c  twi_soft.h
lib/hal/avr0/system/: system.c  system.h
lib/hal/avr0/twi/: twi.c  twi.h
lib/hal/avr0/twi_soft/: twi_soft.c  twi_soft.h
lib/oled/: oled.c  oled.h
lib/oled/font/: font.c  font.h
lib/oled/frame/: frame.c  frame.h
lib/oled/tty/: tty.c  tty.h
lib/twi/: twi.c  twi.h
lib/twi_soft/: twi_soft.c  twi_soft.h
